# ex2

./: README.md  details.txt
src/: BMPImg.cpp  BMPImg.h  CMakeLists.txt  Color.cpp  Color.h  bmp_tester.cpp  myTest.cpp  tags
