project(Ex2)
cmake_minimum_required(VERSION 3.0.0)
set(C_STANDARD C99)
set(CXX_STANDARD C++17)
set(C_COMPILER_ID GNU)
set(CXX_COMPILER_ID GNU)
add_compile_options(-Wall -Wextra -pedantic -Werror)

add_library(color SHARED Color.cpp)
add_library(bmpImg SHARED BMPImg.cpp)
add_library(bmpTester SHARED bmp_tester.cpp)
add_executable(myTester myTest.cpp)
target_link_libraries(myTester bmpTester color)
